# polytopeController

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: dispatch-release.yaml  dispatch.yaml
etc/: PolytopeController.in.yaml  mc_rtc.yaml
src/: CMakeLists.txt  PolytopeController.cpp  PolytopeController.h  api.h  lib.cpp
src/states/: CMakeLists.txt  EstimateMass.cpp  EstimateMass.h  PolytopeController_Initial.cpp  PolytopeController_Initial.h
src/utils/: DynamicPolytope.cpp  DynamicPolytope.h  MCStabilityPolytope.cpp  MCStabilityPolytope.h  WrenchCones.cpp  WrenchCones.h
